<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/row_default_margin"
            android:paddingRight="@dimen/row_default_margin"
            android:orientation="vertical">

            <!-- This view is empty - margin top - required for good compute scrollview size -->
            <View
                android:id="@+id/margin_top_view"
                android:layout_width="match_parent"
                android:layout_height="64dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/row_default_margin"
                android:layout_marginRight="@dimen/row_default_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/row_default_margin"
                    android:layout_marginEnd="@dimen/row_default_margin"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/create_car_brands_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/row_default_margin"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:autofillHints="personName"
                        android:background="@drawable/edit_text"
                        android:ems="10"
                        android:hint="@string/placeholder_brands"
                        android:inputType="textPersonName"
                        android:padding="@dimen/row_default_margin"
                        android:text=""
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp" />

                    <EditText
                        android:id="@+id/create_car_model_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="0dp"
                        android:layout_marginLeft="0dp"
                        android:autofillHints="personName"
                        android:background="@drawable/edit_text"
                        android:ems="10"
                        android:hint="@string/placeholder_model"
                        android:inputType="textPersonName"
                        android:padding="@dimen/row_default_margin"
                        android:text=""
                        android:layout_marginEnd="0dp"
                        android:layout_marginStart="0dp" />
                </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/add_thumbnail_background"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/add_thumbnail_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/add_thumbnail_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/add_thumbnail_label"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:translationY="-10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/add_thumbnail_background"
                        app:layout_constraintEnd_toEndOf="@+id/add_thumbnail_background"
                        app:layout_constraintLeft_toLeftOf="@+id/add_thumbnail_background"
                        app:layout_constraintRight_toRightOf="@+id/add_thumbnail_background"
                        app:layout_constraintStart_toStartOf="@+id/add_thumbnail_background"
                        app:layout_constraintTop_toTopOf="@+id/add_thumbnail_background" />

                    <TextView
                        android:id="@+id/add_thumbnail_second_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/add_thumbnail_second_label"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:translationY="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/add_thumbnail_background"
                        app:layout_constraintEnd_toEndOf="@+id/add_thumbnail_background"
                        app:layout_constraintLeft_toLeftOf="@+id/add_thumbnail_background"
                        app:layout_constraintRight_toRightOf="@+id/add_thumbnail_background"
                        app:layout_constraintStart_toStartOf="@+id/add_thumbnail_background"
                        app:layout_constraintTop_toBottomOf="@+id/add_thumbnail_label"
                        app:layout_constraintTop_toTopOf="@+id/add_thumbnail_background" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/create_car_registration_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/placeholder_registration"
                android:autofillHints="personName"
                android:background="@drawable/edit_text"
                android:padding="@dimen/row_default_margin"
                android:layout_marginTop="@dimen/row_default_margin"
                android:layout_marginRight="@dimen/row_default_margin"
                android:layout_marginLeft="@dimen/row_default_margin"
                android:text="" />

            <EditText
                android:id="@+id/create_car_fuel_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/placeholder_fuel"
                android:autofillHints="personName"
                android:background="@drawable/edit_text"
                android:padding="@dimen/row_default_margin"
                android:layout_marginTop="@dimen/row_default_margin"
                android:layout_marginRight="@dimen/row_default_margin"
                android:layout_marginLeft="@dimen/row_default_margin"
                android:text="" />

            <EditText
                android:id="@+id/create_car_number_of_places_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_number_of_places"
                android:autofillHints="personName"
                android:ems="10"
                android:background="@drawable/edit_text"
                android:padding="@dimen/row_default_margin"
                android:layout_marginTop="@dimen/row_default_margin"
                android:layout_marginRight="@dimen/row_default_margin"
                android:layout_marginLeft="@dimen/row_default_margin"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/create_car_number_of_doors_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_number_of_doors"
                android:autofillHints="personName"
                android:ems="10"
                android:background="@drawable/edit_text"
                android:padding="@dimen/row_default_margin"
                android:layout_marginTop="@dimen/row_default_margin"
                android:layout_marginRight="@dimen/row_default_margin"
                android:layout_marginLeft="@dimen/row_default_margin"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/create_car_description_text"
                android:hint="@string/placeholder_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="personName"
                android:ems="10"
                android:background="@drawable/edit_text"
                android:padding="@dimen/row_default_margin"
                android:layout_marginTop="@dimen/row_default_margin"
                android:layout_marginRight="@dimen/row_default_margin"
                android:layout_marginLeft="@dimen/row_default_margin"
                android:inputType="textPersonName"
                android:text="" />

            <Button
                android:id="@+id/create_car_validation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/validate_button_label"
                android:textColor="@color/white"
                app:backgroundTint="@color/blue"
                android:padding="@dimen/row_default_margin"
                android:layout_margin="@dimen/row_default_margin" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>